re PR java/18362 (internal compiler error: in size_binop, at fold-const.c:1598)

2005-03-04  Andrew Haley  <aph@redhat.com>

        PR java/18362
        * class.c (set_method_index): Don't set method_index if it is
        NULL_TREE.
        (layout_class_method): Don't complain about "non-static method foo
        overrides static method" in the case of indirect dispatch.

From-SVN: r95888